frontend/tests/cases/negative/badExistential.gr
import Existential

unpack : forall {t : Type, f : Type -> Type, a : Type} . Exists f -> (f t -> a) -> a
unpack (Exists x) f = f x
