frontend/tests/cases/negative/badExistential.gr.output
Type checking failed: 
Type error: frontend/tests/cases/negative/badExistential.gr:4:25:
Expected `f a2.0 -> a` but got `f t -> a`